k8s/apps/garage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    goldilocks.fairwinds.com/enabled: "true"
