k8s/apps/garage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - cdn.juliamertz.dev
    - nettenshop.cdn.juliamertz.dev
  rules:
    - backendRefs:
        - name: garage
          port: 3902

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: valnetten-web
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - valnetten.preview.juliamertz.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: valnetten.cdn.juliamertz.dev
      backendRefs:
        - name: garage
          port: 3902

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merlijn-web
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - preview.merlijnvoncken.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: merlijn-site.cdn.juliamertz.dev
      backendRefs:
        - name: garage
          port: 3902
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
            statusCode: 302

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-api
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - s3.juliamertz.dev
  rules:
    - backendRefs:
        - name: garage
          port: 3900
